--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="buttons">
+      <button class="btn" onclick="playmusic('applause')">applause</button>
+      <button class="btn" onclick="playmusic('boo')">boo</button>
+      <button class="btn" onclick="playmusic('gasp')">gasp</button>
+      <button class="btn" onclick="playmusic('tada')">tada</button>
+      <button class="btn" onclick="playmusic('victory')">victory</button>
+      <button class="btn" onclick="playmusic('wrong')">wrong</button>
+      <button class="btn top" onclick="stopSound()">stop</button>
+     </div>
+  
+      <audio id="audio"></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
